@@ -850,7 +850,7 @@ struct eccstr {
     int nfunc;
 
     /* Hash of str. */
-    int hashval;
+    unsigned hashval;
 };
 
 /*
